# db-timetables

./: .gitignore  README.md  example.py  pyproject.toml
.github/workflows/: ci.yml
src/db_timetables/: __init__.py  client.py  exceptions.py  models.py
src/deutsche_bahn/: __init__.py  exceptions.py
src/deutsche_bahn/stada/: __init__.py  client.py  models.py
src/deutsche_bahn/timetables/: __init__.py  exceptions.py  models.py
tests/: test_client.py  test_models.py  test_stada_client.py  test_stada_models.py  test_timetables_client.py
