[project]
name = "db-timetables"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "requests>=2.34.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/db_timetables"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
