[project]
name = "db-timetables"
version = "0.1.0"
description = "Python client for the Deutsche Bahn Timetables API"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "Mika Brueckner", email = "mikabenbrueckner@icloud.com" },
]
keywords = ["deutsche bahn", "db", "timetable", "train", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.34.0",
]

[project.urls]
Repository = "https://github.com/mbbrueckner/db-timetables"

[project.optional-dependencies]
dev = [
    "python-dotenv>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/db_timetables"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
