[project]
name = "deutsche-bahn-py"
version = "0.2.1"
description = "Python clients for the Deutsche Bahn APIs (Timetables, StaDa Station Data)"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "Mika Brueckner", email = "mikabenbrueckner@icloud.com" },
]
keywords = ["deutsche bahn", "db", "timetable", "train", "station", "stada", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.34.0",
]

[project.urls]
Repository = "https://github.com/mbbrueckner/db-timetables"

[tool.hatch.build.targets.wheel]
packages = ["src/deutsche_bahn"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "python-dotenv>=1.0.0",
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "deutsche-bahn-py",
    "ruff>=0.15.12",
]
